--- a/MinimalApi/appsettings.json
+++ b/MinimalApi/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings":{
     "DefaultConnection": "Data Source=MinimalApi.db"
+  },
+  "Keycloak": {
+    "AuthorityUrl": "http://localhost:8088/auth/realms/master",
+    "ClientId": "minimal-api-client"
   }
 }
