minimal-api-and-blazor #26 Documants.Api namespacve changed

--- a/Documents.Api/Properties/launchSettings.json
+++ b/Documents.Api/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "MinimalApi": {
+    "Documents.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
