minimal-api-and-blazor #26 DocumentsBlazor changed namepsace

--- a/BlazorApp/Properties/launchSettings.json
+++ b/BlazorApp/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "BlazorApp": {
+    "DocumentsBlazor": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
