minimal-api-and-blazor #26

--- a/AppDocuments.Api/Properties/launchSettings.json
+++ b/AppDocuments.Api/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Documents.Api": {
+    "AppDocuments.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
