--- a/AppDocuments.Blazor/Properties/launchSettings.json
+++ b/AppDocuments.Blazor/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "DocumentsBlazor": {
+    "AppDocuments.Blazor": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
