--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   keycloak:
-      image: jboss/keycloak
+      image: jboss/keycloak:16.1.1
       container_name: keycloak
       environment:
         KEYCLOAK_USER: admin
