--- a/src/AppDocuments.Api/appsettings.json
+++ b/src/AppDocuments.Api/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings":{
-    "DefaultConnection": "Data Source=MinimalApi.db"
+    "DefaultConnection": "Data Source=AppDocuments.db"
   },
   "Keycloak": {
     "AuthorityUrl": "http://localhost:8088/auth/realms/master",
-    "ClientId": "minimal-api-client"
+    "ClientId": "app-documents-client"
   }
 }
