--- a/src/AppDocuments.Blazor/wwwroot/appsettings.json
+++ b/src/AppDocuments.Blazor/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
     "Keycloak": {
       "Authority": "http://localhost:8088/auth/realms/master",
-      "ClientId": "minimal-api-client"
+      "ClientId": "app-documents-client"
     }
   }
